[package]
name = "RLTrading"
version = "0.1.0-pre.alpha.1"
edition = "2024"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tch = "0.5"
chrono = "0.4"
rust_decimal = "1.29"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros"] }
log = "0.4"
env_logger = "0.10"
